--- a/logo.html
+++ b/logo.html
@@ -2,15 +2,8 @@
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 <style>
     body {
-        background-color: #fafafa;
+        background-color: #fff;
         float: left;
-    }
-    .content {
-        width: 400px;
-        height: 400px;
-        border: 4px solid red;
-        padding: 20px;
-        overflow: hidden;
     }
     .pre-loader {
         margin: 0 auto;
