--- a/logo/valence-logo.html
+++ b/logo/valence-logo.html
@@ -1,29 +1,41 @@
 <html>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 <style>
+
     body {
         background-color: #fff;
+        margin: 10%;
+    }
+
+    #logo-wrapper{ 
+        display: table;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .tagline {
         float: left;
+        font-family: 'Ubuntu', sans-serif;
+        color: #455A64;
+        font-size: 200;
     }
-    .pre-loader {
-        margin: 0 auto;
-        width: 230px;
-        -webkit-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
-        position: absolute;
-        top: 50%;
-        left: 20%;
+
+    .logo{
+        float: left;  
+        margin-right: 10px; 
     }
-    .pre-loader circle {
+
+    .logo circle {
+        fill: #455A64; 
         r: 10;
         -webkit-transform-origin: center center;
                 transform-origin: center center;
     }
 
     ellipse {
-        position: absolute;
-        top: 0;
-        left: 0;
+        fill: transparent;
+        stroke: #B0BEC5;
+        stroke-width: 5;
         stroke-dasharray: 1;
         -webkit-transform-origin: center center;
                 transform-origin: center center;
@@ -31,52 +43,38 @@
                 transform: rotate(3deg);
     }
     ellipse.e2 {
-        stroke-dasharray: 1;
         -webkit-transform: rotate(-30deg);
                 transform: rotate(-30deg);
     }
     ellipse.e3 {
-        stroke-dasharray: 1;
-        -webkit-transform: rotate(145deg);
+        -webkit-transform: rotate(130deg);
                 transform: rotate(130deg);
     }
     ellipse.e4 {
-        stroke-dasharray: 1;
-        -webkit-transform: rotate(125deg);
+        -webkit-transform: rotate(100deg);
                 transform: rotate(100deg);
     }
     ellipse.e5 {
-        stroke-dasharray: 1;
-        -webkit-transform: rotate(145deg);
+        -webkit-transform: rotate(160deg);
                 transform: rotate(160deg);
-    }
-
-    .tagline {
-        position: absolute;
-        top: 8%;
-        left: 30%;
-    }
-
-    .tagline p {
-        font-family: 'Ubuntu', sans-serif;
-        color: #455A64;
-        font-size: 200;
     }
 
 </style>
 <body>
-    <div class="pre-loader">
-    <svg width="240" height="240">
-        <circle fill="#455A64" cx="120" cy="120" r="12"/>
-        <ellipse class="e1" fill="transparent" stroke-width="5" stroke="#B0BEC5" cx="120" cy="120" rx="115" ry="45"/>
-        <ellipse class="e2" fill="transparent" stroke-width="5" stroke="#B0BEC5" cx="120" cy="120" rx="45" ry="115"/>
-        <ellipse class="e3" fill="transparent" stroke-width="5" stroke="#B0BEC5" cx="120" cy="120" rx="115" ry="45"/>
-        <ellipse class="e4" fill="transparent" stroke-width="5" stroke="#B0BEC5" cx="120" cy="120" rx="115" ry="45"/>
-        <ellipse class="e5" fill="transparent" stroke-width="5" stroke="#B0BEC5" cx="120" cy="120" rx="115" ry="45"/>
-    </svg>
-    </div>
-    <div class="tagline">
-        <p>valence</p>
+    <div id="logo-wrapper">
+        <div class="logo">
+            <svg width="240" height="240">
+                <circle cx="120" cy="120" r="12"/>
+                <ellipse class="e1" cx="120" cy="120" rx="115" ry="45"/>
+                <ellipse class="e2" cx="120" cy="120" rx="45" ry="115"/>
+                <ellipse class="e3" cx="120" cy="120" rx="115" ry="45"/>
+                <ellipse class="e4" cx="120" cy="120" rx="115" ry="45"/> 
+                <ellipse class="e5" cx="120" cy="120" rx="115" ry="45"/> 
+            </svg>
+        </div>
+        <div class="tagline">
+            valence
+        </div>
     </div>
 </body>
 </html>
