--- a/logo/pyvalence-logo.html
+++ b/logo/pyvalence-logo.html
@@ -13,11 +13,16 @@
         margin-left: auto;
     }
 
+
     .tagline {
         float: left;
         font-family: 'Ubuntu', sans-serif;
         color: #455A64;
-        font-size: 200;
+        font-size: 180;
+    }
+
+    .pytagline{
+        color: #78909C;
     }
 
     .logo{
@@ -73,7 +78,7 @@
             </svg>
         </div>
         <div class="tagline">
-            valence
+            <span class="pytagline">py</span>valence
         </div>
     </div>
 </body>
